# quickswarm

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml  test.py
scripts/: addmanager.sh  addworker.sh  deploy-networks.py  scripts.md  swarm-add_worker.py  swarm-addworker.py
scripts/utils/: loadenv.py
