[tool.poetry]
name = "tailswarm"
version = "0.1.0"
description = "Helper scripts to create a docker swarm"
authors = ["phbr <phbrcc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
